--- a/src/assets/styles/components/_hero.scss
+++ b/src/assets/styles/components/_hero.scss
@@ -11,6 +11,7 @@
   justify-content: center;
   overflow: hidden;
   text-align: center;
+  margin-top: v.$spacing-xs;
 
   &__bg {
     position: absolute;
